chore(package.json): install i18n, amend eslint

--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "format": "prettier --write .",
     "test": "vitest",
     "commit": "cz"
   },
   "dependencies": {
     "commitizen": "^4.3.1",
     "next": "15.2.0",
+    "next-intl": "^3.26.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -27,9 +29,14 @@
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^4.3.4",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^9",
+    "eslint": "^9.21.0",
     "eslint-config-next": "15.2.0",
+    "eslint-config-prettier": "^10.0.2",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react": "^7.37.4",
     "jsdom": "^26.0.0",
+    "prettier": "^3.5.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4",
     "typescript": "^5",
     "vite-tsconfig-paths": "^5.1.4",
